# oinkerui

./: .editorconfig  .env.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  CHANGELOG_PREDICATES.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  README.md  REFACTOR_PLAN.md  TASK_0.2.5_COMPLETION.md  TASK_0.2_COMPLETION.md  TASK_SUMMARY.md  TESTING_INSTRUCTIONS.md  dev.bat  eslint.config.js  jest.config.js  master_todo.20260121_141747.bak  master_todo.20260121_141803.bak  master_todo.20260121_141812.bak  master_todo.20260121_141815.bak  master_todo.20260121_141818.bak  master_todo.20260121_141821.bak  master_todo.20260121_141824.bak  master_todo.20260121_141827.bak  master_todo.20260121_141830.bak  master_todo.20260121_141833.bak  master_todo.20260121_163756.bak  master_todo.20260121_164227.bak  master_todo.20260121_164423.bak  master_todo.20260122_190649.bak  master_todo.20260122_190959.bak  master_todo.20260122_191545.bak  master_todo.20260122_192245.bak  master_todo.20260122_192542.bak  master_todo.20260123_144811.bak  master_todo.20260123_150646.bak  master_todo.20260123_152853.bak  master_todo.20260123_153433.bak  (+22 more)
backend/: README.md  jest.config.js
backend_python/: pytest.ini  requirements.txt
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DOC_QUERY_GUIDE.md  README.md  SPEC_ANALYSIS.md  TESTING.md  TOOLS.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
log/: backend_tests_012226.txt  backend_tests_012326.txt  phase_0_completion.yaml  (+76 more)
(+307 files in other folders)
